Fixing style on mobile and add background color for block frame

--- a/views/src/styles/styles.scss
+++ b/views/src/styles/styles.scss
@@ -9,7 +9,8 @@ $theme-colors: (
   "headerBarMain": rgb(15, 162, 192),
   "dashHeaderBar": #b6b6b685,
   "mainName": rgb(6, 114, 136),
-  "placeholderBg": rgba(235, 235, 235, 0.678)
+  "placeholderBg": rgba(235, 235, 235, 0.678),
+  "frameBg": rgba(248, 248, 248, 0.555)
 );
 
 $breakpoints: (
@@ -305,8 +306,8 @@ body {
         color: map-get($map: $theme-colors, $key: main);
 
         @include mq(tablet, max) {   
-          top: 20px;
-          font-size: 26px;
+          top: 18px;
+          font-size: 24px;
         }
       }
 
@@ -320,6 +321,11 @@ body {
         padding: 10px 0px;
         padding-left: 55px;
         border: 2px map-get($map: $theme-colors, $key: main) solid;
+
+        @include mq(tablet, max) {
+          font-size: 18px;
+          padding: 60px 0px;
+        }
 
         &::placeholder {
           @include pStyle(treb, 20px, rgb(202, 202, 202), 2px);
@@ -507,6 +513,7 @@ body {
         margin: 8px 0px 8px 5px;
         list-style: none;
         padding: 0;
+
         @include mq(tablet, max) {
           margin-top: 14px;
         }
@@ -578,6 +585,11 @@ body {
       position: relative;
       left: 50%;
       transform: translateX(-50%);
+
+      @include mq(tablet, max) {
+        width: 150px;
+        height: 150px;
+      }
     }
 
     p {
@@ -642,6 +654,7 @@ body {
     border: 1px solid map-get($map: $theme-colors, $key: dashHeaderBar);
     border-radius: 10px;
     padding: 5px 0;
+    background-color: map-get($map: $theme-colors, $key: frameBg);
 
     .info-row {
       display: flex;
@@ -678,6 +691,7 @@ body {
     margin-top: 20px;
     border: 1px solid map-get($map: $theme-colors, $key: dashHeaderBar);
     border-radius: 10px;
+    background-color: map-get($map: $theme-colors, $key: frameBg);
 
     .fl-title {
       cursor: pointer;
@@ -785,6 +799,10 @@ body {
     }
   }
   
+  .view-no-post p {
+    padding: 10px;
+  }
+  
   .view-tab {
     display: flex;
     margin-top: 20px;
@@ -804,6 +822,8 @@ body {
   margin: 20px 0;
   padding: 20px;
   transition: 0.5s;
+  background-color: map-get($map: $theme-colors, $key: frameBg);
+
   @include mq(tablet, max) {
     padding: 10px 5px;
   }
@@ -823,7 +843,7 @@ body {
       @include mq(tablet, max) {
         width: 35px;
         height: 35px;
-        margin: 0px 80px 0px 5px;
+        margin: 5px 80px 0px 5px;
       }
     }
 
@@ -1142,6 +1162,7 @@ body {
   border: 1px solid map-get($map: $theme-colors, $key: dashHeaderBar);
   border-radius: 10px;
   padding: 15px;
+  background-color: map-get($map: $theme-colors, $key: frameBg);
 
   .edit-title {
     @include pStyle(lucida, 18px, main, 0px);
@@ -1151,6 +1172,16 @@ body {
   .edit-form-container form {
     .edit-row {
       margin: 5px 0px;
+
+      @include mq(tablet, max) {
+        .col-2 {
+          padding-left: 0;
+        }
+
+        .col-10 {
+          padding-left: 25px;
+        }
+      }
 
       p {
         @include pStyle(lucida, 16px, black, 0px);
@@ -1251,14 +1282,26 @@ body {
   border-radius: 10px;
   margin-top: 20px;
   padding: 20px;
+  background-color: map-get($map: $theme-colors, $key: frameBg);
+
+  @include mq(tablet, max) {
+    padding: 20px 10px;
+  }
 
   .friend-view-select-tab {
     display: flex;
+    justify-content: flex-start;
 
     .friend-head {
       @include pStyle(treb, 18px, main, 0px);
       cursor: pointer;
-      margin: 0px 20px 20px 0px;
+      margin: 0px 0px 20px 0px;
+      padding: 0px 15px;
+      text-align: center;
+
+      @include mq(tablet, max) {
+        @include pStyle(treb, 15px, main, 0px);
+      }
     }
   }
 
@@ -1269,6 +1312,10 @@ body {
     border-radius: 10px;
     padding: 10px;
     margin: 10px 0;
+
+    @include mq(tablet, max) {
+      padding: 10px 0px;
+    }
 
     .friend-info {
       display: flex;
@@ -1308,6 +1355,10 @@ body {
       background-color: map-get($map: $theme-colors, $key: dangerText);          
       box-shadow: 0px 0px 4px 0px map-get($map: $theme-colors, $key: dangerTextShadow);
 
+      @include mq(tablet, max) {
+        @include pStyle(treb, 14px, white, 0px);
+      }
+
       @include mq(tablet, min) {
         &:active {
           box-shadow: inset 0px 0px 4px 0px map-get($map: $theme-colors, $key: dangerTextShadow);
@@ -1325,6 +1376,10 @@ body {
       margin: 5px;
       background-color: map-get($map: $theme-colors, $key: main);
       box-shadow: 0px 0px 4px 0px map-get($map: $theme-colors, $key: shadowMain);
+
+      @include mq(tablet, max) {
+        @include pStyle(treb, 14px, white, 0px);
+      }
 
       @include mq(tablet, min) {
         &:active {
